updated wordle to motle url

--- a/motle/index.html
+++ b/motle/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>MOTLE - Jeu de mots</title>
+  <title>Motle - Jeu de mots</title>
   <meta name="theme-color" content="#538d4e">
   <link rel="icon" href="favicon.png"/>
   <link rel="stylesheet" href="style.css">
