--- a/motle/index.html
+++ b/motle/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Motle - Jeu de mots</title>
   <meta name="theme-color" content="#538d4e">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.png"/>
   <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
